# c-toxcore-hs

./: .cirrus.yml  .gitignore  .travis.yml  BUILD.bazel  Makefile  README.md
.github/: settings.yml
src/: hsbracket.c
src/Network/Tox/CExport/: CryptoCore.hs
test/: test-program.c
