load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

cc_library(
    name = "hsbracket",
    srcs = ["src/hsbracket.c"],
    tags = ["no-cross"],
    deps = ["//third_party/haskell:rts"],
    alwayslink = True,
)

haskell_library(
    name = "c-toxcore-hs",
    srcs = ["src/Network/Tox/CExport/CryptoCore.hs"],
    src_strip_prefix = "src",
    tags = ["no-cross"],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        ":hsbracket",
        "//hs-toxcore",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:random",
        "//third_party/haskell:saltine",
    ],
)

cc_test(
    name = "test",
    size = "small",
    srcs = [
        "test/crypto_core.h",
        "test/test-program.c",
    ],
    tags = ["no-cross"],
    deps = [
        ":c-toxcore-hs",
    ],
)
